--- a/backBien/public/browser/browser/index.html
+++ b/backBien/public/browser/browser/index.html
@@ -27,6 +27,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="modulepreload" href="chunk-VQPWTXWK.js"><link rel="modulepreload" href="chunk-XEMPKELE.js"><link rel="modulepreload" href="chunk-UYGEFWM3.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-W4LNMONK.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-VQPWTXWK.js"><link rel="modulepreload" href="chunk-XEMPKELE.js"><link rel="modulepreload" href="chunk-UYGEFWM3.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-XY5PW5XH.js" type="module"></script></body>
 
 </html>
