Fix Surtir farmacia - Filtro existencias bajas

--- a/backBien/public/browser/browser/index.html
+++ b/backBien/public/browser/browser/index.html
@@ -27,6 +27,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="modulepreload" href="chunk-LKWIYOSA.js"><link rel="modulepreload" href="chunk-TVQAMB6R.js"><link rel="modulepreload" href="chunk-G4HFYLKI.js"><link rel="modulepreload" href="chunk-2XHFFHZX.js"><link rel="modulepreload" href="chunk-UBI5DTFP.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-5XLVHTNA.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-LKWIYOSA.js"><link rel="modulepreload" href="chunk-TVQAMB6R.js"><link rel="modulepreload" href="chunk-G4HFYLKI.js"><link rel="modulepreload" href="chunk-2XHFFHZX.js"><link rel="modulepreload" href="chunk-UBI5DTFP.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-QUGZQ4OJ.js" type="module"></script></body>
 
 </html>
