Fix Productos vendidos quitar columna unidad

--- a/backBien/public/browser/browser/index.html
+++ b/backBien/public/browser/browser/index.html
@@ -27,6 +27,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="modulepreload" href="chunk-7MWSEFUH.js"><link rel="modulepreload" href="chunk-U5DW4IS3.js"><link rel="modulepreload" href="chunk-QE52ZK2X.js"><link rel="modulepreload" href="chunk-22UOXS6U.js"><link rel="modulepreload" href="chunk-4YV45C7K.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-EUTYQ2SN.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-7MWSEFUH.js"><link rel="modulepreload" href="chunk-U5DW4IS3.js"><link rel="modulepreload" href="chunk-QE52ZK2X.js"><link rel="modulepreload" href="chunk-22UOXS6U.js"><link rel="modulepreload" href="chunk-4YV45C7K.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-RINP2W44.js" type="module"></script></body>
 
 </html>
