--- a/backBien/public/browser/browser/index.html
+++ b/backBien/public/browser/browser/index.html
@@ -27,6 +27,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="modulepreload" href="chunk-7MWSEFUH.js"><link rel="modulepreload" href="chunk-U5DW4IS3.js"><link rel="modulepreload" href="chunk-AWWLIUG4.js"><link rel="modulepreload" href="chunk-22UOXS6U.js"><link rel="modulepreload" href="chunk-4YV45C7K.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-B43XAAZD.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-W55JI6HL.js"><link rel="modulepreload" href="chunk-WIPYVYOI.js"><link rel="modulepreload" href="chunk-DHCT27C5.js"><link rel="modulepreload" href="chunk-HUM5NH5C.js"><link rel="modulepreload" href="chunk-GEX5OBKS.js"><link rel="modulepreload" href="chunk-Y4KAVT34.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-CVO5N7CU.js" type="module"></script></body>
 
 </html>
