Fix desfase de fecha en las promos - Estilos en reporte de ventas

--- a/backBien/public/browser/browser/index.html
+++ b/backBien/public/browser/browser/index.html
@@ -27,6 +27,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="modulepreload" href="chunk-W55JI6HL.js"><link rel="modulepreload" href="chunk-WIPYVYOI.js"><link rel="modulepreload" href="chunk-DHCT27C5.js"><link rel="modulepreload" href="chunk-HUM5NH5C.js"><link rel="modulepreload" href="chunk-GEX5OBKS.js"><link rel="modulepreload" href="chunk-Y4KAVT34.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-CVO5N7CU.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-X6GS4KBN.js"><link rel="modulepreload" href="chunk-6VHPTNRM.js"><link rel="modulepreload" href="chunk-YMTNE5CM.js"><link rel="modulepreload" href="chunk-KQL23F5B.js"><link rel="modulepreload" href="chunk-3FOEDP5V.js"><link rel="modulepreload" href="chunk-MDG5H4DX.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-CQA4W7TT.js" type="module"></script></body>
 
 </html>
