Fix reporte pedidos ajuste en filtro - Tickets de entrega y de cancelación de pedidos

--- a/backBien/public/browser/browser/index.html
+++ b/backBien/public/browser/browser/index.html
@@ -27,6 +27,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="modulepreload" href="chunk-AE2BEQ4Z.js"><link rel="modulepreload" href="chunk-LPTRF4E5.js"><link rel="modulepreload" href="chunk-V27U2UOQ.js"><link rel="modulepreload" href="chunk-ARU4TPAH.js"><link rel="modulepreload" href="chunk-FPX2FNEV.js"><link rel="modulepreload" href="chunk-6VVKRHY3.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-V2VSQU62.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-AE2BEQ4Z.js"><link rel="modulepreload" href="chunk-LPTRF4E5.js"><link rel="modulepreload" href="chunk-V27U2UOQ.js"><link rel="modulepreload" href="chunk-ARU4TPAH.js"><link rel="modulepreload" href="chunk-FPX2FNEV.js"><link rel="modulepreload" href="chunk-6VVKRHY3.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-ZOSEHV2L.js" type="module"></script></body>
 
 </html>
