--- a/backBien/public/browser/browser/index.html
+++ b/backBien/public/browser/browser/index.html
@@ -27,6 +27,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="modulepreload" href="chunk-S36WQ5KA.js"><link rel="modulepreload" href="chunk-YWWVNW5S.js"><link rel="modulepreload" href="chunk-TXXT4QK6.js"><link rel="modulepreload" href="chunk-2LBP3UT5.js"><link rel="modulepreload" href="chunk-UG3D3XXD.js"><link rel="modulepreload" href="chunk-6N6Z5H3R.js"><link rel="modulepreload" href="chunk-MIQLH5Q4.js"><link rel="modulepreload" href="chunk-HFXM6UGO.js"><link rel="modulepreload" href="chunk-6RHC2QAT.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-6NT6V4MX.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-S36WQ5KA.js"><link rel="modulepreload" href="chunk-YWWVNW5S.js"><link rel="modulepreload" href="chunk-TXXT4QK6.js"><link rel="modulepreload" href="chunk-2LBP3UT5.js"><link rel="modulepreload" href="chunk-UG3D3XXD.js"><link rel="modulepreload" href="chunk-6N6Z5H3R.js"><link rel="modulepreload" href="chunk-MIQLH5Q4.js"><link rel="modulepreload" href="chunk-HFXM6UGO.js"><link rel="modulepreload" href="chunk-6RHC2QAT.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-NKYQBSOV.js" type="module"></script></body>
 
 </html>
