Fix filtro de fechas en reporte-compras back y front - check box afectar existencias en compras back y front

--- a/backBien/public/browser/browser/index.html
+++ b/backBien/public/browser/browser/index.html
@@ -27,6 +27,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="modulepreload" href="chunk-TMKYHG5J.js"><link rel="modulepreload" href="chunk-Z2L2EGN7.js"><link rel="modulepreload" href="chunk-KLOYOXRW.js"><link rel="modulepreload" href="chunk-VVD4SQ2L.js"><link rel="modulepreload" href="chunk-OQUCAL3T.js"><link rel="modulepreload" href="chunk-52ISVZDF.js"><link rel="modulepreload" href="chunk-M426ODYY.js"><link rel="modulepreload" href="chunk-ODEY4TCY.js"><link rel="modulepreload" href="chunk-XE7EIJJT.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-AWGSHAP7.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-TMKYHG5J.js"><link rel="modulepreload" href="chunk-Z2L2EGN7.js"><link rel="modulepreload" href="chunk-KLOYOXRW.js"><link rel="modulepreload" href="chunk-VVD4SQ2L.js"><link rel="modulepreload" href="chunk-OQUCAL3T.js"><link rel="modulepreload" href="chunk-52ISVZDF.js"><link rel="modulepreload" href="chunk-M426ODYY.js"><link rel="modulepreload" href="chunk-ODEY4TCY.js"><link rel="modulepreload" href="chunk-XE7EIJJT.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-6POWL3UY.js" type="module"></script></body>
 
 </html>
