--- a/backBien/public/browser/browser/index.html
+++ b/backBien/public/browser/browser/index.html
@@ -27,6 +27,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="modulepreload" href="chunk-ZT5EU4OI.js"><link rel="modulepreload" href="chunk-WJ4DACOM.js"><link rel="modulepreload" href="chunk-7XPEVO3R.js"><link rel="modulepreload" href="chunk-Y675JWMI.js"><link rel="modulepreload" href="chunk-YMSMTQXA.js"><link rel="modulepreload" href="chunk-GRBMB2OM.js"><link rel="modulepreload" href="chunk-HX3KCEDU.js"><link rel="modulepreload" href="chunk-FHNPZDXH.js"><link rel="modulepreload" href="chunk-6NQV6F6F.js"><link rel="modulepreload" href="chunk-RCWCNPPR.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-M7UCKEL6.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-2MFXM6Z7.js"><link rel="modulepreload" href="chunk-WH5CJV36.js"><link rel="modulepreload" href="chunk-SEY5KJLS.js"><link rel="modulepreload" href="chunk-HSZ2VDAG.js"><link rel="modulepreload" href="chunk-CQNPOOD5.js"><link rel="modulepreload" href="chunk-ALLLFA77.js"><link rel="modulepreload" href="chunk-HI35JVTJ.js"><link rel="modulepreload" href="chunk-NKYZDFGX.js"><link rel="modulepreload" href="chunk-PLVJGC3V.js"><link rel="modulepreload" href="chunk-5GLYYB2Q.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-3MIUHDMJ.js" type="module"></script></body>
 
 </html>
