Paginación y ordenamientos Reporte de Pedidos

--- a/backBien/public/browser/browser/index.html
+++ b/backBien/public/browser/browser/index.html
@@ -27,6 +27,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="modulepreload" href="chunk-BL6NNVQW.js"><link rel="modulepreload" href="chunk-GLAYKUWK.js"><link rel="modulepreload" href="chunk-M5AALMWZ.js"><link rel="modulepreload" href="chunk-TWVT3WT3.js"><link rel="modulepreload" href="chunk-XY2IWGS7.js"><link rel="modulepreload" href="chunk-DURSQLSL.js"><link rel="modulepreload" href="chunk-7UNWPVIN.js"><link rel="modulepreload" href="chunk-JKGFMHHD.js"><link rel="modulepreload" href="chunk-AO5SUQJL.js"><link rel="modulepreload" href="chunk-DD56TSNY.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-MWEGOHEI.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-BL6NNVQW.js"><link rel="modulepreload" href="chunk-GLAYKUWK.js"><link rel="modulepreload" href="chunk-M5AALMWZ.js"><link rel="modulepreload" href="chunk-TWVT3WT3.js"><link rel="modulepreload" href="chunk-XY2IWGS7.js"><link rel="modulepreload" href="chunk-DURSQLSL.js"><link rel="modulepreload" href="chunk-7UNWPVIN.js"><link rel="modulepreload" href="chunk-JKGFMHHD.js"><link rel="modulepreload" href="chunk-KMUVBBJD.js"><link rel="modulepreload" href="chunk-DD56TSNY.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-DXCE56KH.js" type="module"></script></body>
 
 </html>
