corrección Surtir farmacias, se pueden omitir productos, imprime surtido previo y real

--- a/backBien/public/browser/browser/index.html
+++ b/backBien/public/browser/browser/index.html
@@ -27,6 +27,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="modulepreload" href="chunk-BL6NNVQW.js"><link rel="modulepreload" href="chunk-ELMSP7TU.js"><link rel="modulepreload" href="chunk-YKD6NKEQ.js"><link rel="modulepreload" href="chunk-ENAHLAZL.js"><link rel="modulepreload" href="chunk-OLYH2LXY.js"><link rel="modulepreload" href="chunk-A4LHU2X3.js"><link rel="modulepreload" href="chunk-5MJ2K2SW.js"><link rel="modulepreload" href="chunk-JKGFMHHD.js"><link rel="modulepreload" href="chunk-TXFMT57U.js"><link rel="modulepreload" href="chunk-3BAARAH2.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-6YAGEE4X.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-BL6NNVQW.js"><link rel="modulepreload" href="chunk-ELMSP7TU.js"><link rel="modulepreload" href="chunk-YKD6NKEQ.js"><link rel="modulepreload" href="chunk-ENAHLAZL.js"><link rel="modulepreload" href="chunk-OLYH2LXY.js"><link rel="modulepreload" href="chunk-A4LHU2X3.js"><link rel="modulepreload" href="chunk-5MJ2K2SW.js"><link rel="modulepreload" href="chunk-JKGFMHHD.js"><link rel="modulepreload" href="chunk-TXFMT57U.js"><link rel="modulepreload" href="chunk-3BAARAH2.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-CT4FZ3NI.js" type="module"></script></body>
 
 </html>
