Impresión de etiquetas solo en Chrome, fieles al diseño con multiples fuentes

--- a/backBien/public/browser/browser/index.html
+++ b/backBien/public/browser/browser/index.html
@@ -27,6 +27,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="modulepreload" href="chunk-BL6NNVQW.js"><link rel="modulepreload" href="chunk-CSBH4SQY.js"><link rel="modulepreload" href="chunk-IPONPKYD.js"><link rel="modulepreload" href="chunk-SR7SB6XH.js"><link rel="modulepreload" href="chunk-VZOO5TFG.js"><link rel="modulepreload" href="chunk-GSDOQS6K.js"><link rel="modulepreload" href="chunk-4J2NSC3R.js"><link rel="modulepreload" href="chunk-JKGFMHHD.js"><link rel="modulepreload" href="chunk-CF6CBGYC.js"><link rel="modulepreload" href="chunk-3SN5LNYM.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-WHKAWKLI.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-BL6NNVQW.js"><link rel="modulepreload" href="chunk-CSBH4SQY.js"><link rel="modulepreload" href="chunk-IPONPKYD.js"><link rel="modulepreload" href="chunk-SR7SB6XH.js"><link rel="modulepreload" href="chunk-VZOO5TFG.js"><link rel="modulepreload" href="chunk-GSDOQS6K.js"><link rel="modulepreload" href="chunk-4J2NSC3R.js"><link rel="modulepreload" href="chunk-JKGFMHHD.js"><link rel="modulepreload" href="chunk-CF6CBGYC.js"><link rel="modulepreload" href="chunk-3SN5LNYM.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-ZE7KQ2VD.js" type="module"></script></body>
 
 </html>
