Diseño de etiquetas usando botones de flechas y flechas del teclado

--- a/backBien/public/browser/browser/index.html
+++ b/backBien/public/browser/browser/index.html
@@ -27,6 +27,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="modulepreload" href="chunk-BL6NNVQW.js"><link rel="modulepreload" href="chunk-2NP7YVVR.js"><link rel="modulepreload" href="chunk-655YDVQQ.js"><link rel="modulepreload" href="chunk-GD3W25EC.js"><link rel="modulepreload" href="chunk-YF2JX5QO.js"><link rel="modulepreload" href="chunk-7CIQHWV4.js"><link rel="modulepreload" href="chunk-OOTXM5O4.js"><link rel="modulepreload" href="chunk-JKGFMHHD.js"><link rel="modulepreload" href="chunk-H6EUTKON.js"><link rel="modulepreload" href="chunk-PFEDVX7Q.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-J54UTFN3.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-BL6NNVQW.js"><link rel="modulepreload" href="chunk-FD3FWINZ.js"><link rel="modulepreload" href="chunk-4RMVUNO2.js"><link rel="modulepreload" href="chunk-ITHDBC5V.js"><link rel="modulepreload" href="chunk-ACPXCRRW.js"><link rel="modulepreload" href="chunk-DCJRYGY5.js"><link rel="modulepreload" href="chunk-USRURCH6.js"><link rel="modulepreload" href="chunk-JKGFMHHD.js"><link rel="modulepreload" href="chunk-3GFDB6GM.js"><link rel="modulepreload" href="chunk-MYTICTMG.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-DPGEOFU5.js" type="module"></script></body>
 
 </html>
