--- a/backBien/public/browser/browser/index.html
+++ b/backBien/public/browser/browser/index.html
@@ -27,6 +27,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="modulepreload" href="chunk-BL6NNVQW.js"><link rel="modulepreload" href="chunk-FD3FWINZ.js"><link rel="modulepreload" href="chunk-4RMVUNO2.js"><link rel="modulepreload" href="chunk-ITHDBC5V.js"><link rel="modulepreload" href="chunk-ACPXCRRW.js"><link rel="modulepreload" href="chunk-DCJRYGY5.js"><link rel="modulepreload" href="chunk-USRURCH6.js"><link rel="modulepreload" href="chunk-JKGFMHHD.js"><link rel="modulepreload" href="chunk-3GFDB6GM.js"><link rel="modulepreload" href="chunk-MYTICTMG.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-EJ7U2H5A.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-BL6NNVQW.js"><link rel="modulepreload" href="chunk-34HLRTKY.js"><link rel="modulepreload" href="chunk-7AHVNB4E.js"><link rel="modulepreload" href="chunk-J2DDS6AL.js"><link rel="modulepreload" href="chunk-BOYW3R3O.js"><link rel="modulepreload" href="chunk-YJ6IPZHP.js"><link rel="modulepreload" href="chunk-KODG3G25.js"><link rel="modulepreload" href="chunk-JKGFMHHD.js"><link rel="modulepreload" href="chunk-BYRD3BZU.js"><link rel="modulepreload" href="chunk-WNBONMO5.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-JHZTFN3Z.js" type="module"></script></body>
 
 </html>
