--- a/backBien/public/browser/browser/index.html
+++ b/backBien/public/browser/browser/index.html
@@ -27,6 +27,6 @@
 <body class="mat-typography">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="modulepreload" href="chunk-BL6NNVQW.js"><link rel="modulepreload" href="chunk-L62JPHCT.js"><link rel="modulepreload" href="chunk-T2JU5RTM.js"><link rel="modulepreload" href="chunk-Q6X2RQS5.js"><link rel="modulepreload" href="chunk-2ZR7JFHQ.js"><link rel="modulepreload" href="chunk-MU2BUS7P.js"><link rel="modulepreload" href="chunk-LT7ECYES.js"><link rel="modulepreload" href="chunk-JKGFMHHD.js"><link rel="modulepreload" href="chunk-NLTCMIC6.js"><link rel="modulepreload" href="chunk-OIT4XKAV.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-UGCMDJMP.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-BL6NNVQW.js"><link rel="modulepreload" href="chunk-L62JPHCT.js"><link rel="modulepreload" href="chunk-T2JU5RTM.js"><link rel="modulepreload" href="chunk-Q6X2RQS5.js"><link rel="modulepreload" href="chunk-2ZR7JFHQ.js"><link rel="modulepreload" href="chunk-MU2BUS7P.js"><link rel="modulepreload" href="chunk-LT7ECYES.js"><link rel="modulepreload" href="chunk-JKGFMHHD.js"><link rel="modulepreload" href="chunk-NLTCMIC6.js"><link rel="modulepreload" href="chunk-OIT4XKAV.js"><script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="scripts-WL2QHKC5.js" defer></script><script src="main-4E4OIJWV.js" type="module"></script></body>
 
 </html>
